feat: add declarative tools.yaml configuration for MCP Toolbox
- Define domain-specific PostgreSQL tools in tools.yaml (get-all-products, get-product-by-id, get-products-by-category, add-product, delete-product-by-id, list_tables, get-table-schema)
- Update ProductCatalogService to invoke declarative tools with typed arguments instead of raw SQL strings
- Update scripts/start-containers.sh to mount tools.yaml and execute toolbox with --config
- Update unit tests (ProductCatalogServiceTest) and live integration tests (SpringBootPostgresApplicationTests) to assert declarative tool behavior
- Document declarative tools architecture and configuration in README.md